objects/Student_JO__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course_Name__c</referenceTo>
        <relationshipLabel>Student(JO)</relationshipLabel>
        <relationshipName>Student_JO</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duplicate_check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Duplicate check</label>
        <length>90</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Student(JO)</relationshipLabel>
        <relationshipName>Student_JO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Name  &amp; "CTS"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <label>Student(JO)</label>
    <nameField>
        <label>Student(JO) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student(JO)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Course__c</columns>
        <columns>Faculty__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Fields_Display</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Course__c</columns>
        <columns>Faculty__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields Display</label>
    </listViews>
</CustomObject>